[project]
name = "colawater-scripts"
version = "v1.0.0"
authors = [{ name = "felix", email = "sfx86@users.noreply.github.com" }]
description = "miscellaneous scripts, mostly data wrangling"
readme = "README.md"
requires-python = ">=3.9"

[tool.mypy]
python_version = 3.11
files = "./src"
strict = true
enable_error_code = "ignore-without-code"

[[tool.mypy.overrides]]
module = "arcpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# there should be typing info as of 4.0.38
# still doesn't work for some reason
module = "pyodbc.*"
ignore_missing_imports = true
